crates/ignis_codegen_c/tests/snapshots/golden_c__c_drop_glue_string_field.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

// Type forward declarations
typedef struct Named Named;

// Type definitions
struct Named {
    string field_0;
    i32 field_1;
};

int main(void);

int main(void) {
    // Locals
    struct Named l0; // n

    // Temporaries
    struct Named* t0;

entry_0:
    t0 = &l0;
    (t0)->field_0 = ignis_string_from_cstr("hello");
    (t0)->field_1 = 42;
    ignis_string_drop(l0.field_0);
    return 0;
}
