crates/ignis_codegen_c/tests/snapshots/golden_c__c_generic_function_mangling.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

static void __ignis_user_main(void);
static i32 identity____i32_i32_i32(i32 x);
static const char* identity____str_str_str(const char* x);

#line 6 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    i32 l0; // a
    const char* l1; // b

    // Temporaries
    i32 t0;
    const char* t1;

entry_0:
    t0 = identity____i32_i32_i32(42);
    l0 = t0;
    t1 = identity____str_str_str("hello");
    l1 = t1;
    return;
}

#line 84 "<generated-c>"

#line 2 "test.ign"
static i32 identity____i32_i32_i32(i32 x) {
    // Locals
    i32 l0; // x

    // Temporaries
    i32 t0;
    i32 t1;

entry_0:
    l0 = x;
    t1 = l0;
    return t1;
}

#line 101 "<generated-c>"

#line 2 "test.ign"
static const char* identity____str_str_str(const char* x) {
    // Locals
    const char* l0; // x

    // Temporaries
    const char* t0;
    const char* t1;

entry_0:
    l0 = x;
    t1 = l0;
    return t1;
}

#line 118 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
